the_project/front/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-front-svc
spec:
  type: ClusterIP
  selector:
    app: to-do-front
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3005
